Added 'Progress' to the protobuf and client.
