# protobuf/api.pb.go
@@ -12,6 +12,7 @@ It has these top-level messages:
 	Meta
 	RequestMessage
 	StatusMessage
+	QueueProgress
 */
 package API
 
@@ -176,11 +177,84 @@ func (m *StatusMessage) GetDetail() string {
 	return ""
 }
 
+type QueueProgress struct {
+	IncomingListLength int32   `protobuf:"varint,1,opt,name=incomingListLength" json:"incomingListLength,omitempty"`
+	ReceivedListLength int32   `protobuf:"varint,2,opt,name=receivedListLength" json:"receivedListLength,omitempty"`
+	NonExpiredCount    int32   `protobuf:"varint,3,opt,name=nonExpiredCount" json:"nonExpiredCount,omitempty"`
+	ExpiredCount       int32   `protobuf:"varint,4,opt,name=expiredCount" json:"expiredCount,omitempty"`
+	CompletedCount     int32   `protobuf:"varint,5,opt,name=completedCount" json:"completedCount,omitempty"`
+	FailedCount        int32   `protobuf:"varint,6,opt,name=failedCount" json:"failedCount,omitempty"`
+	RunningTasks       []*Task `protobuf:"bytes,7,rep,name=runningTasks" json:"runningTasks,omitempty"`
+	ExpiredTasks       []*Task `protobuf:"bytes,8,rep,name=expiredTasks" json:"expiredTasks,omitempty"`
+}
+
+func (m *QueueProgress) Reset()                    { *m = QueueProgress{} }
+func (m *QueueProgress) String() string            { return proto.CompactTextString(m) }
+func (*QueueProgress) ProtoMessage()               {}
+func (*QueueProgress) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{4} }
+
+func (m *QueueProgress) GetIncomingListLength() int32 {
+	if m != nil {
+		return m.IncomingListLength
+	}
+	return 0
+}
+
+func (m *QueueProgress) GetReceivedListLength() int32 {
+	if m != nil {
+		return m.ReceivedListLength
+	}
+	return 0
+}
+
+func (m *QueueProgress) GetNonExpiredCount() int32 {
+	if m != nil {
+		return m.NonExpiredCount
+	}
+	return 0
+}
+
+func (m *QueueProgress) GetExpiredCount() int32 {
+	if m != nil {
+		return m.ExpiredCount
+	}
+	return 0
+}
+
+func (m *QueueProgress) GetCompletedCount() int32 {
+	if m != nil {
+		return m.CompletedCount
+	}
+	return 0
+}
+
+func (m *QueueProgress) GetFailedCount() int32 {
+	if m != nil {
+		return m.FailedCount
+	}
+	return 0
+}
+
+func (m *QueueProgress) GetRunningTasks() []*Task {
+	if m != nil {
+		return m.RunningTasks
+	}
+	return nil
+}
+
+func (m *QueueProgress) GetExpiredTasks() []*Task {
+	if m != nil {
+		return m.ExpiredTasks
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*Task)(nil), "API.Task")
 	proto.RegisterType((*Meta)(nil), "API.Meta")
 	proto.RegisterType((*RequestMessage)(nil), "API.RequestMessage")
 	proto.RegisterType((*StatusMessage)(nil), "API.StatusMessage")
+	proto.RegisterType((*QueueProgress)(nil), "API.QueueProgress")
 	proto.RegisterEnum("API.Status", Status_name, Status_value)
 }
 
@@ -200,6 +274,7 @@ type APIClient interface {
 	LoadTask(ctx context.Context, in *RequestMessage, opts ...grpc.CallOption) (*Task, error)
 	HeartBeat(ctx context.Context, in *Task, opts ...grpc.CallOption) (*StatusMessage, error)
 	Complete(ctx context.Context, in *Task, opts ...grpc.CallOption) (*StatusMessage, error)
+	Progress(ctx context.Context, in *RequestMessage, opts ...grpc.CallOption) (*QueueProgress, error)
 }
 
 type aPIClient struct {
@@ -255,6 +330,15 @@ func (c *aPIClient) Complete(ctx context.Context, in *Task, opts ...grpc.CallOpt
 	return out, nil
 }
 
+func (c *aPIClient) Progress(ctx context.Context, in *RequestMessage, opts ...grpc.CallOption) (*QueueProgress, error) {
+	out := new(QueueProgress)
+	err := grpc.Invoke(ctx, "/API.API/Progress", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // Server API for API service
 
 type APIServer interface {
@@ -263,6 +347,7 @@ type APIServer interface {
 	LoadTask(context.Context, *RequestMessage) (*Task, error)
 	HeartBeat(context.Context, *Task) (*StatusMessage, error)
 	Complete(context.Context, *Task) (*StatusMessage, error)
+	Progress(context.Context, *RequestMessage) (*QueueProgress, error)
 }
 
 func RegisterAPIServer(s *grpc.Server, srv APIServer) {
@@ -359,6 +444,24 @@ func _API_Complete_Handler(srv interface{}, ctx context.Context, dec func(interf
 	return interceptor(ctx, in, info, handler)
 }
 
+func _API_Progress_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(RequestMessage)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(APIServer).Progress(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/API.API/Progress",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(APIServer).Progress(ctx, req.(*RequestMessage))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _API_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "API.API",
 	HandlerType: (*APIServer)(nil),
@@ -383,6 +486,10 @@ var _API_serviceDesc = grpc.ServiceDesc{
 			MethodName: "Complete",
 			Handler:    _API_Complete_Handler,
 		},
+		{
+			MethodName: "Progress",
+			Handler:    _API_Progress_Handler,
+		},
 	},
 	Streams:  []grpc.StreamDesc{},
 	Metadata: "api.proto",
@@ -391,33 +498,43 @@ var _API_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("api.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 446 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x52, 0xcb, 0x6e, 0xd3, 0x40,
-	0x14, 0xc5, 0x49, 0x9a, 0xc7, 0xad, 0x5a, 0x45, 0x53, 0x51, 0x59, 0x6e, 0x55, 0x45, 0xa6, 0x8b,
-	0xaa, 0x0b, 0x8f, 0x28, 0x3b, 0x76, 0x21, 0x0d, 0xad, 0x45, 0x9a, 0x5a, 0x36, 0x11, 0xeb, 0x09,
-	0xb9, 0x24, 0x56, 0x53, 0x8f, 0x9b, 0x19, 0x57, 0x94, 0xaa, 0x1b, 0x24, 0xf8, 0x01, 0x3e, 0x8d,
-	0x5f, 0xe0, 0x43, 0xd0, 0x5c, 0xdb, 0x82, 0x08, 0x03, 0x9b, 0xee, 0xee, 0xb9, 0x8f, 0x33, 0x47,
-	0xe7, 0x0c, 0x74, 0x44, 0x1a, 0x7b, 0xe9, 0x4a, 0x6a, 0xc9, 0xea, 0xfd, 0xc0, 0x77, 0xf6, 0xe7,
-	0x52, 0xce, 0x97, 0xc8, 0x45, 0x1a, 0x73, 0x91, 0x24, 0x52, 0x0b, 0x1d, 0xcb, 0x44, 0xe5, 0x2b,
-	0xce, 0x5e, 0x31, 0x25, 0x34, 0xcd, 0x3e, 0x70, 0xbc, 0x4e, 0xf5, 0x5d, 0x3e, 0x74, 0xbf, 0x5a,
-	0xd0, 0x78, 0x2b, 0xd4, 0x15, 0xb3, 0xa1, 0x75, 0x93, 0x61, 0x86, 0xfe, 0xa9, 0x6d, 0xf5, 0xac,
-	0xa3, 0x4e, 0x58, 0x42, 0xb6, 0x0b, 0x4d, 0x2d, 0xd4, 0x95, 0x7f, 0x6a, 0xd7, 0x68, 0x50, 0x20,
-	0xc6, 0xa0, 0x31, 0x95, 0xb3, 0x3b, 0xbb, 0x4e, 0x5d, 0xaa, 0x4d, 0x0f, 0x93, 0x5b, 0x65, 0x37,
-	0x7a, 0x75, 0xd3, 0x33, 0x35, 0x3b, 0x84, 0x2d, 0xfc, 0x98, 0xc6, 0x2b, 0x12, 0x15, 0xe1, 0x7b,
-	0x7b, 0xa3, 0x67, 0x1d, 0x6d, 0x84, 0xeb, 0x4d, 0xb7, 0x07, 0x8d, 0x0b, 0xd4, 0xe2, 0xef, 0x3a,
-	0xdc, 0x00, 0xb6, 0x43, 0xbc, 0xc9, 0x50, 0xe9, 0x0b, 0x54, 0x4a, 0xcc, 0xf1, 0x1f, 0x9a, 0xff,
-	0x78, 0xb3, 0x56, 0xf5, 0xe6, 0x08, 0xb6, 0x22, 0x2d, 0x74, 0xa6, 0x4a, 0xc2, 0x67, 0xd0, 0x54,
-	0xd4, 0x20, 0xbe, 0xed, 0x93, 0x4d, 0xaf, 0x1f, 0xf8, 0x5e, 0xbe, 0x13, 0x16, 0x23, 0xe3, 0xc7,
-	0x0c, 0xb5, 0x88, 0x97, 0xa5, 0x1f, 0x39, 0x3a, 0xe6, 0xd0, 0xcc, 0x37, 0xd9, 0x26, 0xb4, 0xa2,
-	0xc9, 0x60, 0x30, 0x8c, 0xa2, 0xee, 0x13, 0x03, 0x5e, 0xf7, 0xfd, 0xd1, 0x24, 0x1c, 0x76, 0x2d,
-	0x03, 0x26, 0xe3, 0x37, 0xe3, 0xcb, 0x77, 0xe3, 0x6e, 0xed, 0xe4, 0x4b, 0x1d, 0x4c, 0x7c, 0xec,
-	0x0c, 0x5a, 0xe7, 0x28, 0x96, 0x7a, 0xf1, 0x89, 0xed, 0x7a, 0x79, 0x58, 0x5e, 0x19, 0x96, 0x37,
-	0x34, 0x61, 0x39, 0xec, 0x37, 0x21, 0x85, 0x58, 0xb7, 0xfb, 0xf9, 0xfb, 0x8f, 0x6f, 0x35, 0x60,
-	0x6d, 0xbe, 0x28, 0xae, 0x7d, 0x68, 0x07, 0x99, 0x5a, 0x50, 0x9e, 0x1d, 0xba, 0x30, 0x65, 0xe5,
-	0xf1, 0x01, 0x1d, 0xdb, 0xee, 0x0e, 0xbf, 0x7d, 0xce, 0xc9, 0x35, 0x7e, 0x5f, 0x98, 0xf7, 0xf0,
-	0xd2, 0x3a, 0x66, 0x67, 0xd0, 0x1e, 0x49, 0x31, 0x23, 0xaa, 0x1d, 0xba, 0x5f, 0xf7, 0xde, 0xf9,
-	0xc5, 0xef, 0xee, 0x11, 0xd7, 0x53, 0x56, 0xc5, 0xc5, 0x02, 0xe8, 0x9c, 0xa3, 0x58, 0xe9, 0x57,
-	0x28, 0xf4, 0xff, 0x44, 0x1d, 0x12, 0xd1, 0x81, 0xb3, 0x5f, 0x41, 0xc4, 0xef, 0xf3, 0x6f, 0xf7,
-	0xc0, 0x2e, 0xa1, 0x3d, 0x90, 0xd7, 0xe9, 0x12, 0x35, 0x3e, 0x0a, 0xe1, 0xb4, 0x49, 0x66, 0xbf,
-	0xf8, 0x19, 0x00, 0x00, 0xff, 0xff, 0x8a, 0x2a, 0xbd, 0x8d, 0x57, 0x03, 0x00, 0x00,
+	// 599 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x53, 0xcf, 0x4e, 0xdb, 0x4e,
+	0x10, 0xfe, 0xe5, 0x7f, 0x32, 0x01, 0x7e, 0xd1, 0xa2, 0x22, 0x2b, 0x20, 0x64, 0xb9, 0xa8, 0x8a,
+	0x90, 0x6a, 0xab, 0xf4, 0xd6, 0x1b, 0x0d, 0x29, 0x58, 0x0d, 0xe0, 0x3a, 0x45, 0x3d, 0x2f, 0xc9,
+	0xe0, 0x58, 0x84, 0x5d, 0xe3, 0x5d, 0xa3, 0x52, 0xc4, 0xa5, 0x87, 0xbe, 0x40, 0x1f, 0xad, 0x87,
+	0xbe, 0x40, 0xfb, 0x1e, 0xd5, 0xae, 0xed, 0x92, 0x80, 0x4b, 0x2f, 0xbd, 0xed, 0x7c, 0xf3, 0xed,
+	0xb7, 0x33, 0x3b, 0xf3, 0x41, 0x8b, 0x46, 0xa1, 0x1d, 0xc5, 0x5c, 0x72, 0x52, 0xd9, 0xf5, 0xdc,
+	0xee, 0x46, 0xc0, 0x79, 0x30, 0x43, 0x87, 0x46, 0xa1, 0x43, 0x19, 0xe3, 0x92, 0xca, 0x90, 0x33,
+	0x91, 0x52, 0xba, 0xeb, 0x59, 0x56, 0x47, 0xa7, 0xc9, 0x99, 0x83, 0x17, 0x91, 0xbc, 0x4e, 0x93,
+	0xd6, 0x97, 0x12, 0x54, 0xdf, 0x53, 0x71, 0x4e, 0x0c, 0x68, 0x5c, 0x26, 0x98, 0xa0, 0xbb, 0x67,
+	0x94, 0xcc, 0x52, 0xaf, 0xe5, 0xe7, 0x21, 0x59, 0x83, 0xba, 0xa4, 0xe2, 0xdc, 0xdd, 0x33, 0xca,
+	0x3a, 0x91, 0x45, 0x84, 0x40, 0xf5, 0x94, 0x4f, 0xae, 0x8d, 0x8a, 0x46, 0xf5, 0x59, 0x61, 0xc8,
+	0xae, 0x84, 0x51, 0x35, 0x2b, 0x0a, 0x53, 0x67, 0xb2, 0x05, 0xcb, 0xf8, 0x31, 0x0a, 0x63, 0x5d,
+	0xd4, 0x08, 0xc7, 0x46, 0xcd, 0x2c, 0xf5, 0x6a, 0xfe, 0x22, 0x68, 0x99, 0x50, 0x3d, 0x44, 0x49,
+	0xff, 0x5c, 0x87, 0xe5, 0xc1, 0x8a, 0x8f, 0x97, 0x09, 0x0a, 0x79, 0x88, 0x42, 0xd0, 0x00, 0x1f,
+	0xa9, 0xf9, 0xc1, 0x9b, 0xe5, 0xa2, 0x37, 0x87, 0xb0, 0x3c, 0x92, 0x54, 0x26, 0x22, 0x17, 0x7c,
+	0x0a, 0x75, 0xa1, 0x01, 0xad, 0xb7, 0xb2, 0xd3, 0xb6, 0x77, 0x3d, 0xd7, 0x4e, 0x39, 0x7e, 0x96,
+	0x52, 0xff, 0x31, 0x41, 0x49, 0xc3, 0x59, 0xfe, 0x1f, 0x69, 0x64, 0xfd, 0x2c, 0xc3, 0xf2, 0x3b,
+	0xf5, 0xbe, 0x17, 0xf3, 0x20, 0x46, 0x21, 0x88, 0x0d, 0x24, 0x64, 0x63, 0x7e, 0x11, 0xb2, 0x60,
+	0x18, 0x0a, 0x39, 0x44, 0x16, 0xc8, 0xa9, 0x96, 0xae, 0xf9, 0x05, 0x19, 0xc5, 0x8f, 0x71, 0x8c,
+	0xe1, 0x15, 0x4e, 0xe6, 0xf8, 0x69, 0xe9, 0x05, 0x19, 0xd2, 0x83, 0xff, 0x19, 0x67, 0x03, 0xd5,
+	0x13, 0x4e, 0xfa, 0x3c, 0x61, 0x52, 0x0f, 0xa3, 0xe6, 0xdf, 0x87, 0x89, 0x05, 0x4b, 0x38, 0x4f,
+	0xab, 0x6a, 0xda, 0x02, 0x46, 0x9e, 0xc1, 0xca, 0x98, 0x5f, 0x44, 0x33, 0x94, 0x39, 0x2b, 0x1d,
+	0xd4, 0x3d, 0x94, 0x98, 0xd0, 0x3e, 0xa3, 0xe1, 0x2c, 0x27, 0xd5, 0x35, 0x69, 0x1e, 0x22, 0xcf,
+	0x61, 0x29, 0x4e, 0x18, 0x0b, 0x59, 0xa0, 0x56, 0x4b, 0x18, 0x0d, 0xb3, 0xd2, 0x6b, 0xef, 0xb4,
+	0xf4, 0x67, 0x2a, 0xc4, 0x5f, 0x48, 0x2b, 0x7a, 0x56, 0x48, 0x4a, 0x6f, 0x3e, 0xa0, 0xcf, 0xa7,
+	0xb7, 0x1d, 0xa8, 0xa7, 0x13, 0x21, 0x6d, 0x68, 0x8c, 0x4e, 0xfa, 0xfd, 0xc1, 0x68, 0xd4, 0xf9,
+	0x4f, 0x05, 0x6f, 0x76, 0xdd, 0xe1, 0x89, 0x3f, 0xe8, 0x94, 0x54, 0x70, 0x72, 0xf4, 0xf6, 0xe8,
+	0xf8, 0xc3, 0x51, 0xa7, 0xbc, 0xf3, 0xbd, 0x02, 0xca, 0x26, 0x64, 0x1f, 0x1a, 0x07, 0x48, 0x67,
+	0x72, 0xfa, 0x89, 0xac, 0xd9, 0xa9, 0x29, 0xec, 0xdc, 0x14, 0xf6, 0x40, 0x99, 0xa2, 0x4b, 0xe6,
+	0x06, 0x9e, 0x2d, 0x85, 0xd5, 0xf9, 0xfc, 0xed, 0xc7, 0xd7, 0x32, 0x90, 0xa6, 0x33, 0xcd, 0x6e,
+	0xbb, 0xd0, 0xf4, 0x12, 0x31, 0xd5, 0xbe, 0xb9, 0x2b, 0xb3, 0xf0, 0xf2, 0xa6, 0xbe, 0x6c, 0x58,
+	0xab, 0xce, 0xd5, 0x0b, 0x47, 0x6f, 0xa7, 0x73, 0x93, 0x2d, 0xe9, 0xed, 0xab, 0xd2, 0x36, 0xd9,
+	0x87, 0xe6, 0x90, 0x53, 0xdd, 0x19, 0x59, 0xd5, 0xf7, 0x17, 0x77, 0xbc, 0x7b, 0xa7, 0x6f, 0xad,
+	0x6b, 0xad, 0x27, 0xa4, 0x48, 0x8b, 0x78, 0xd0, 0x3a, 0x40, 0x1a, 0xcb, 0xd7, 0x48, 0xe5, 0xdf,
+	0x8a, 0xda, 0xd2, 0x42, 0x9b, 0xdd, 0x8d, 0x02, 0x21, 0xe7, 0x26, 0xb5, 0xf7, 0x2d, 0x39, 0x86,
+	0x66, 0x3f, 0x9b, 0xfc, 0xbf, 0x11, 0xf4, 0xa0, 0xf9, 0xdb, 0x1a, 0x85, 0xbd, 0xa6, 0xd2, 0x0b,
+	0x1e, 0x7a, 0xb4, 0xe9, 0xd3, 0xba, 0x1e, 0xdf, 0xcb, 0x5f, 0x01, 0x00, 0x00, 0xff, 0xff, 0x3b,
+	0xbb, 0xa0, 0x87, 0x11, 0x05, 0x00, 0x00,
 }
